[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Bomb.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/SplitGate.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/OrGate.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/NotGate.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/Level4.gd" type="Script" id=5]

[node name="Level4" type="Node2D"]
script = ExtResource( 5 )

[node name="Bomb" parent="." instance=ExtResource( 1 )]

[node name="Explosive" parent="Bomb" index="1"]
__meta__ = {
"_edit_group_": true
}

[node name="BombClock" parent="Bomb" index="2"]
__meta__ = {
"_edit_group_": true
}

[node name="BatteryPack" parent="Bomb" index="3"]
position = Vector2( 408, 88 )

[node name="OrGate" parent="Bomb" instance=ExtResource( 3 )]
position = Vector2( 264, 224 )
__meta__ = {
"_edit_group_": true
}

[node name="Input2" parent="Bomb/OrGate" index="3"]
locked = true

[node name="Output" parent="Bomb/OrGate" index="4"]
locked = true

[node name="OrGate2" parent="Bomb" instance=ExtResource( 3 )]
position = Vector2( 264, 96 )
__meta__ = {
"_edit_group_": true
}

[node name="NotGate" parent="Bomb" instance=ExtResource( 4 )]
position = Vector2( 352, 96 )
__meta__ = {
"_edit_group_": true
}

[node name="Input" parent="Bomb/NotGate" index="2"]
locked = true

[node name="NotGate2" parent="Bomb" instance=ExtResource( 4 )]
position = Vector2( 312, 160 )
__meta__ = {
"_edit_group_": true
}

[node name="Output" parent="Bomb/NotGate2" index="3"]
locked = true

[node name="SplitGate" parent="Bomb" instance=ExtResource( 2 )]
position = Vector2( 416, 152 )

[node name="Input" parent="Bomb/SplitGate" index="2"]
locked = true

[node name="Output2" parent="Bomb/SplitGate" index="4"]
locked = true

[editable path="Bomb"]
[editable path="Bomb/OrGate"]
[editable path="Bomb/OrGate2"]
[editable path="Bomb/NotGate"]
[editable path="Bomb/NotGate2"]
[editable path="Bomb/SplitGate"]
